Fixed timestamp, spacing, and myriad other mini-bugs.

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -62,8 +62,4 @@ main {
     background-color: #779cab;
     background-image: url(https://www.transparenttextures.com/patterns/45-degree-fabric-light.png);
   }
-
-  .new-tweet {
-   
-  }
 }
